# ros_grasp_detection

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: headers.launch  test.launch
msg/: positionNpose.msg
src/: build_cgd_dataset.py  grasp_det.py  imgui.ini  inference.py  test.py
src/models/grasp/m4/: checkpoint  m4.ckpt.index
