<?xml version="1.0"?>
<package>
  <name>ros_grasp_detection</name>
  <version>0.9.0</version>
  <description>IRL_Juna made this package for detecting grasp pose</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ros_grasp_detection</url>
  <url type="bugtracker">https://github.com/ros/ros_tutorials/issues</url>
  <url type="repository">https://github.com/ros/ros_tutorials</url>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
